k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genesis-backend
  namespace: genesis-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genesis-backend
  template:
    metadata:
      labels:
        app: genesis-backend
    spec:
      serviceAccountName: backend-pod-manager-sa
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: backend
          image: sydv3604/genesis-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: genesis-backend-svc
  namespace: genesis-ns
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: genesis-backend
  type: ClusterIP
