k8s/genesis-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genesis-proxy
  namespace: genesis-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genesis-proxy
  template:
    metadata:
      labels:
        app: genesis-proxy
    spec:
      containers:
        - name: proxy
          image: sydv3604/genesis-proxy:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: genesis-proxy-svc
  namespace: genesis-ns
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: genesis-proxy
